<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/icon_home"
        android:title="Home" />
    <item
        android:id="@+id/menu_item_codes"
        android:icon="@drawable/image_qrcode"
        android:title="Codes"/>
    <item
        android:id="@+id/menu_item_friends"
        android:icon="@drawable/icon_friends"
        android:title="Friends"/>
    <item
        android:id="@+id/menu_item_scan"
        android:icon="@drawable/icon_scan"
        android:title="Scan"/>
</menu>