<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_geo_search"
        android:title=""
        android:icon="@drawable/icon_geo_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search"
        android:title=""
        android:icon="@drawable/icon_text_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/menu_item_dropdown"
        android:title=""
        android:icon="@drawable/icon_menu_horizontal"
        app:showAsAction="always" />
</menu>

